--- a/index.html
+++ b/index.html
@@ -1,39 +1,83 @@
-<!--
-    Simple static Telegram WebApp. Does not verify the WebAppInitData, as a bot token would be needed for that.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>python-telegram-bot Example WebApp</title>
+    <title>Screenshot Viewer WebApp</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: var(--tg-theme-bg-color);
+        }
+        #screenshotContainer {
+            position: relative;
+            max-width: 90vw;
+            max-height: 80vh;
+        }
+        #screenshot {
+            max-width: 100%;
+            max-height: 100%;
+            display: none;
+        }
+        #coordinates {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 5px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
-<script type="text/javascript">
-    const colorPicker = new iro.ColorPicker('#picker', {
-        borderColor: "#ffffff",
-        borderWidth: 1,
-        width: Math.round(document.documentElement.clientWidth / 2),
-    });
-    colorPicker.on('color:change', function (color) {
-        document.body.style.background = color.hexString;
-    });
+<body>
+    <div id="screenshotContainer">
+        <img id="screenshot" src="" alt="Screenshot">
+        <div id="coordinates"></div>
+    </div>
 
-    Telegram.WebApp.ready();
-    Telegram.WebApp.MainButton.setText('Choose Color').show().onClick(function () {
-        const data = JSON.stringify({hex: colorPicker.color.hexString, rgb: colorPicker.color.rgb});
-        Telegram.WebApp.sendData(data);
-        Telegram.WebApp.close();
-    });
-</script>
-<body style="background-color: #ffffff">
-<div style="position: absolute; margin-top: 5vh; margin-left: 5vw; height: 90vh; width: 90vw; border-radius: 5vh; background-color: var(--tg-theme-bg-color); box-shadow: 0 0 2vw
- #000000;">
-    <div id="picker"
-         style="display: flex; justify-content: center; align-items: center; height: 100%; width: 100%"></div>
-</div>
+    <script type="text/javascript">
+        Telegram.WebApp.ready();
+
+        const screenshot = document.getElementById('screenshot');
+        const coordinates = document.getElementById('coordinates');
+
+        // Request screenshot when the WebApp loads
+        Telegram.WebApp.sendData(JSON.stringify({action: 'screenshot'}));
+
+        // Listen for messages from the bot
+        Telegram.WebApp.onEvent('message', function(message) {
+            if (message.photo) {
+                screenshot.src = message.photo[0].file_id;
+                screenshot.style.display = 'block';
+            }
+        });
+
+        screenshot.addEventListener('click', function(event) {
+            const rect = screenshot.getBoundingClientRect();
+            const x = Math.round(event.clientX - rect.left);
+            const y = Math.round(event.clientY - rect.top);
+            
+            coordinates.textContent = `X: ${x}, Y: ${y}`;
+            
+            // Send coordinates to the bot
+            Telegram.WebApp.sendData(JSON.stringify({
+                action: 'coordinates',
+                x: x,
+                y: y
+            }));
+        });
+
+        Telegram.WebApp.MainButton.setText('Close').show().onClick(function () {
+            Telegram.WebApp.close();
+        });
+
+        Telegram.WebApp.expand();
+    </script>
 </body>
-<script type="text/javascript">
-    Telegram.WebApp.expand();
-</script>
 </html>
